# xorg-xedit

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  Xedit-color.ad  Xedit-noxprint.ad  Xedit-sample  Xedit-xprint.ad  autogen.sh  commands.c  configure.ac  hook.c  ispell.c  lisp.c  options.c  realpath.c  strcasecmp.c  util.c  xedit.c  xedit.h  xedit.man
app-defaults/: .gitignore
lisp/: .gitignore  README  TODO  bytecode.c  bytecode.h  compile.c  core.c  core.h  debugger.c  debugger.h  format.c  format.h  hash.c  hash.h  helper.c  helper.h  internal.h  io.c  io.h  lisp.c  lisp.h  lsp.c  math.c  math.h  mathimp.c  package.c  package.h  pathname.c  pathname.h  private.h  read.c  read.h  regex.c  regex.h  require.c  require.h  stream.c  stream.h  string.c  string.h  (+8 more)
lisp/modules/: indent.lsp  lisp.lsp  psql.c  syntax.lsp  x11.c  xaw.c  xedit.lsp  xt.c
lisp/modules/progmodes/: c.lsp  html.lsp  imake.lsp  lisp.lsp  make.lsp  man.lsp  rpm.lsp  sgml.lsp  sh.lsp  xlog.lsp  xrdb.lsp
lisp/mp/: mp.c  mp.h  mpi.c
lisp/re/: .gitignore  README  re.c  re.h  rec.c  reo.c  rep.h  tests.txt
lisp/test/: hello.lsp  list.lsp  math.lsp  regex.lsp  stream.lsp  widgets.lsp
man/: xedit.man
